--- a/DLIP/scripts/notebooks/aug_hyper_test.ipynb
+++ b/DLIP/scripts/notebooks/aug_hyper_test.ipynb
@@ -100,11 +100,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4e87b40679c7d1fbb1e159dd6f7845cabdcbfb49a1dfa297703def3bd0f7ed3f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('detectron')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -118,9 +115,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
